--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ secret/terraform.tfstate
 secret/terraform.tfstate.backup
 secret/.terraform
 secret/.terraform.lock.hcl
+secret/scripts/.github_token
+secret/scripts/.tfe_token
+secret/scripts/payload.json
