--- a/secret/config.yml
+++ b/secret/config.yml
@@ -1,10 +1,26 @@
-tfe         :
-  org_token :
-    org     : jawn
+provider:
+  github:
+    token: ""
+    owner: javvn
 
-github_actions           :
-  env_secret             :
-    automating_terraform :
-      repository         : automating-terraform
-      secret_name        : TF_API_TOKEN
-      plaintext_value    : ""
+local_file:
+  tfe_token_payload:
+    filename: ./scripts/payload.json
+    content:
+      data:
+        type: authentication-tokens
+        attributes:
+          description: Automating-Terraform-GitHub-Actions
+
+github_actions        :
+  secret              :
+    tfe_token         :
+      repository      : automating-terraform
+      secret_name     : TF_API_TOKEN
+      plaintext_value : ""
+
+
+data:
+  local_file:
+    tfe_token:
+      filename: ./scripts/.tfe_token
