--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name : Terraform State Pull
       id   : pull
-      run  : terraform state pull
+      run  : terraform state pull > terraform.tfstate
       continue-on-error: true
 
     - name : Terraform State list
@@ -110,4 +110,5 @@ jobs:
       run  : terraform apply --auto-approve
       continue-on-error: true
 
-    - run : ls
+    - run : ls -al
+    - run : pwd
