--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name : Terraform State Pull
       id   : pull
-      run  : terraform state pull > terraform.tfstate
+      run  : terraform state pull
       continue-on-error: true
 
     - name : Terraform State list
@@ -59,7 +59,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -no-color -input=false
+      run: terraform plan -no-color
       continue-on-error: true
 
     - name: Update Pull Request
